@@ -1,3 +1,9 @@
+2007-06-27  Ross Burton  <ross@openedhand.com>
+
+	* calendar-window.c:
+	Sort completed tasks last, treat unprioritised tasks as normal
+	priority, and fall back on sorting by summary. (#451546).
+
 2007-06-26  Vincent Untz  <vuntz@gnome.org>
 
 	* Makefile.am: add LIBPANEL_APPLET_CFLAGS to make compilation work. It
